<resources>
    <string name="app_name">FinancialTracker</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_username_here">Enter username here</string>
    <string name="enter_password_here">Enter password here</string>
    <string name="login_question">Login?</string>
    <string name="sign_up_question">Sign Up?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="re_enter_password_here">Re-enter password here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Account</string>
    <string name="dashboard">Dashboard</string>
    <string name="transactions">Transactions</string>
    <string name="uid">UID</string>
    <string name="sign_out">Sign Out</string>
    <string name="add">Add</string>
    <string name="change_theme">Change Theme</string>
    <string name="edit">Edit</string>
    <string name="new_text">New</string>
    <string name="done">Done</string>
    <string name="title">Title</string>
    <string name="enter_title_here">Enter title here</string>
    <string name="amount">Amount</string>
    <string name="enter_amount_here">Enter amount here</string>
    <string name="date">Date</string>
    <string name="enter_date_here">Enter date here</string>
    <string name="category">Category</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="blank">Blank</string>
    <string name="categories">Categories</string>
    <string name="food">Food</string>
    <string name="home">Home</string>
    <string name="travel">Travel</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="entertainment">Entertainment</string>
    <string name="groceries">Groceries</string>
    <string name="education">Education</string>
    <string name="health">Health</string>
    <string name="salary">Salary</string>

    <string-array name="my_categories">
        <item>Food</item>
        <item>Home</item>
        <item>Travel</item>
        <item>Salary</item>
        <item>Health</item>
        <item>Education</item>
        <item>Groceries</item>
        <item>Entertainment</item>
        <item>Miscellaneous</item>
    </string-array>
</resources>